<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".HelpActivity" >
	
	    <TextView
	        android:id="@+id/help_intro_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:text="@string/rbook_help_intro_title" />
	
	     <TextView
	        android:id="@+id/help_intro"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/help_intro_title"
	        android:layout_marginTop="20dp"
	        android:text="@string/rbook_help_intro" />
	
	    <TextView
	        android:id="@+id/help_read_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/help_intro"
	        android:layout_marginTop="20dp"
	        android:textSize="16sp"
	        android:text="@string/rbook_help_read_title" />
	
	    <TextView
	        android:id="@+id/help_read"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/help_read_title"
	        android:layout_marginTop="20dp"
	        android:text="@string/rbook_help_read" />
	
	    <TextView
	        android:id="@+id/help_edit_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/help_read"
	        android:layout_marginTop="20dp"
	        android:textSize="16sp"
	        android:text="@string/rbook_help_edit_title" />
	
	    <TextView
	        android:id="@+id/help_edit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/help_edit_title"
	        android:layout_marginTop="20dp"
	        android:text="@string/rbook_help_edit" />
	
	    <TextView
	        android:id="@+id/help_copyright_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:layout_below="@+id/help_edit"
	        android:text="@string/rbook_copyright" 
	        android:textSize="10sp"/>
	</RelativeLayout>
</ScrollView>
