<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".RoadBookEditActivity" >
	
	    <ImageView
	        android:id="@+id/book_edit_name_icon"
	        android:layout_width="24dp"
	        android:layout_height="24dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBottom="@+id/book_edit_name_text"
	        android:contentDescription="@string/default_text"
	        android:src="@drawable/ic_activity_logo" />
	
	    <EditText
	        android:id="@+id/book_edit_name_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@+id/book_edit_name_icon"
	        android:inputType="text"
	        android:hint="@string/book_edit_title_hint" 
	        android:textSize="24sp" />
	
	    <EditText
	        android:id="@+id/book_edit_description_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/book_edit_name_text"
	        android:layout_below="@+id/book_edit_name_text"
	        android:layout_marginTop="5dp"
	        android:inputType="text"
	        android:hint="@string/book_edit_decription_hint" 
	        android:textSize="18sp" />
	
	    <ImageView
	        android:id="@+id/book_edit_location_icon"
	        android:layout_width="20dp"
	        android:layout_height="20dp"
	        android:layout_toLeftOf="@+id/book_edit_location_text"
	        android:layout_alignBottom="@+id/book_edit_location_text"
	        android:contentDescription="@string/default_text"
	        android:src="@drawable/ic_activity_location" />
	
	    <EditText
	        android:id="@+id/book_edit_location_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/book_edit_name_text"
	        android:layout_below="@+id/book_edit_description_text"
	        android:layout_marginTop="20dp"
	        android:inputType="text"
	        android:hint="@string/book_edit_location_hint"
	        android:textSize="20sp" />
	
	    <ImageView
	        android:id="@+id/book_edit_distance_icon"
	        android:layout_width="20dp"
	        android:layout_height="20dp"
	        android:layout_toLeftOf="@+id/book_edit_distance_text"
	        android:layout_alignBottom="@+id/book_edit_distance_text"
	        android:contentDescription="@string/default_text"
	        android:src="@drawable/ic_activity_milestone" />
	
	    <TextView
	        android:id="@+id/book_edit_distance_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/book_edit_name_text"
	        android:layout_below="@+id/book_edit_location_text"
	        android:layout_marginTop="20dp"
	        android:text="@string/default_text"
	        android:textSize="20sp" />
	
	    <ImageView
	        android:id="@+id/book_edit_image"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/book_edit_distance_text"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:contentDescription="@string/default_text" />
	
	    <Button
	        android:id="@+id/book_edit_photo_button"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_below="@+id/book_edit_image"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/ic_activity_camera" />
	
	    <Button
	        android:id="@+id/book_edit_start_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/book_edit_image"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/ic_activity_go" />
	
	</RelativeLayout>
</ScrollView>

