<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".RoadPointEditActivity" >
	
	    <ImageView
	        android:id="@+id/point_edit_direction_icon"
	        android:layout_width="24dp"
	        android:layout_height="24dp"
	        android:layout_toLeftOf="@+id/point_edit_direction_text"
	        android:layout_alignTop="@+id/point_edit_direction_text"
		    android:contentDescription="@string/default_text"
	        android:src="@drawable/ic_activity_direction" />
	
	    <EditText
	        android:id="@+id/point_edit_direction_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:hint="@string/point_edit_direction_hint"
		    android:inputType="text"
	        android:textSize="20sp" />
	
	    <ImageButton
	        android:id="@+id/point_edit_road_image"
	        android:layout_width="100dp"
	    	android:layout_height="100dp"
	  		android:layout_below="@+id/point_edit_direction_text"
	        android:layout_centerHorizontal="true"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/default_text"
	        android:src="@drawable/question_mark_small" />
	
	    <EditText
	        android:id="@+id/point_edit_description_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	  		android:layout_below="@+id/point_edit_road_image"
	        android:layout_centerHorizontal="true"
	        android:textStyle="italic"
	        android:hint="@string/point_edit_description_hint"
		    android:inputType="text"
	        android:textSize="24sp" />
	    
	    <ImageView
	        android:id="@+id/point_edit_kilometer_icon"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignBottom="@+id/point_edit_kilometer_text"
	        android:layout_marginBottom="15dp"
	        android:contentDescription="@string/default_text"
	        android:src="@drawable/ic_activity_milestone" />
	
	    <EditText
	        android:id="@+id/point_edit_kilometer_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/point_edit_kilometer_icon"
	        android:layout_below="@+id/point_edit_description_text"
	        android:hint="@string/default_float_text"
		    android:inputType="text"
	        android:textSize="50sp" />
	
	    <TextView
	        android:id="@+id/point_edit_partialkilometer_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/point_edit_kilometer_text"
	        android:layout_alignParentLeft="true"
	        android:text="@string/default_text"
	        android:textSize="16sp" />
	
	    <ImageView
	        android:id="@+id/point_edit_partialkilometer_icon"
	        android:layout_width="16dp"
	        android:layout_height="16dp"
	        android:layout_toRightOf="@+id/point_edit_partialkilometer_text"
	        android:layout_alignTop="@+id/point_edit_partialkilometer_text"
	        android:layout_marginLeft="5dp"
	        android:src="@drawable/ic_activity_distance_from" />
	
	    <ImageView
	        android:id="@+id/point_edit_distancetonext_icon"
	        android:layout_width="16dp"
	        android:layout_height="16dp"
	        android:layout_toLeftOf="@+id/point_edit_distancetonext_text"
	        android:layout_alignTop="@+id/point_edit_distancetonext_text"
	        android:layout_marginRight="5dp"
	        android:src="@drawable/ic_activity_distance_to" />
	
	    <TextView
	        android:id="@+id/point_edit_distancetonext_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/point_edit_kilometer_text"
	        android:layout_below="@+id/point_edit_kilometer_text"
	        android:text="@string/default_text"
	        android:textSize="16sp" />
	    
	    <TextView
	        android:id="@+id/point_edit_numbers_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/point_edit_next_button"
	        android:layout_alignParentRight="true"
	        android:text="@string/default_text"
	        android:textSize="16sp" />

	    <Button
	        android:id="@+id/point_edit_previous_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/point_edit_partialkilometer_text"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/ic_activity_previous" />
	
	    <Button
	        android:id="@+id/point_edit_next_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/point_edit_previous_button"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/ic_activity_next" />
	
	    <Button
	        android:id="@+id/point_edit_photo_button"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_alignBottom="@+id/point_edit_album_button"
	        android:layout_toLeftOf="@+id/point_edit_album_button"
	        android:layout_marginRight="5dp"
	        android:background="@drawable/ic_activity_camera" />
	
	    <Button
	        android:id="@+id/point_edit_album_button"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_alignBottom="@+id/point_edit_next_button"
	        android:layout_toLeftOf="@+id/point_edit_next_button"
	        android:layout_marginRight="5dp"
	        android:background="@drawable/ic_activity_album" />
	
	    <Button
	        android:id="@+id/point_edit_map_button"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:layout_alignBottom="@+id/point_edit_previous_button"
	        android:layout_toRightOf="@+id/point_edit_previous_button"
	        android:layout_marginLeft="5dp"
	        android:background="@drawable/ic_activity_compass" />
	
	
	</RelativeLayout>
</ScrollView>
